refractoring, added ace and lots more

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -12,3 +12,12 @@
  *= require bootstrap
  *= require bootstrap-responsive
  */
+
+.content{
+  margin: 60px;
+}
+#editor { 
+  margin-left: 180px;
+  width: 1024px;
+  height: 720px;
+}
