--- a/app/views/admin/layouts/admin.html.haml
+++ b/app/views/admin/layouts/admin.html.haml
@@ -3,9 +3,9 @@
   %head
     %title= @title
     = stylesheet_link_tag    "admin", :media => "all"
-    = javascript_include_tag "http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js"
     = javascript_include_tag "admin"
     = csrf_meta_tags
+    = yield :head
   %body
     .content
       = yield
