--- a/app/views/admin/layouts/admin.html.haml
+++ b/app/views/admin/layouts/admin.html.haml
@@ -4,6 +4,7 @@
     %title= @title
     = stylesheet_link_tag    "admin", :media => "all"
     = javascript_include_tag "admin"
+    = javascript_include_tag "http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js"
     = csrf_meta_tags
     = yield :head
   %body
